--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,32 @@ body {
 }
 
 .top-link {
-  display: block;
+  display: flex;
   text-decoration: none;
   font-family: var(--font-2);
   font-size: 14px;
   font-weight: 300;
   color: var(--sticky-header-color);
+}
+
+a.phone::before {
+  display: inline-block;
+  content: '';
+  padding-right: 5px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/phone.svg);
+  background-repeat: no-repeat;
+}
+
+a.letter::before {
+  display: inline-block;
+  content: '';
+  padding-right: 5px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/mail.svg);
+  background-repeat: no-repeat;
 }
 
 .register-menu {
@@ -143,6 +163,87 @@ b {
   color: var(--baner-color);
 }
 
+.options{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.options :last-child{
+  margin-right: 30px;
+}
+
+.toolblock{
+  margin-top: 90px;
+}
+
+.tool{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+  padding: 0;
+}
+
+.tool-name{
+  text-transform: uppercase;
+  font-family: var(--font-2);
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--grey-2-color);
+}
+
+.settings::before{
+  display: inline-block;
+  content: '';
+  width: 90px;
+  height: 90px;
+  background-image: url(../images/settings.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+
+.safe::before{
+  display: inline-block;
+  content: '';
+  width: 90px;
+  height: 90px;
+  background-image: url(../images/safe-box.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.net::before{
+  display: inline-block;
+  content: '';
+  width: 90px;
+  height: 90px;
+  background-image: url(../images/internet.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.compass::before{
+  display: inline-block;
+  content: '';
+  width: 90px;
+  height: 90px;
+  background-image: url(../images/compass.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+
+.tool-about{
+  font-family: var(--font-2);
+  font-weight: 300;
+  font-size: 14px;
+  color: var(--grey-2-color);
+}
+
 .row-2 {
   margin: 0;
   padding: 0;
@@ -174,6 +275,26 @@ section {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 48px;
+}
+
+h2.color-line::after{
+  display: block;
+  content: '';
+  width: 160px;
+  height: 16px;
+  background-image: url(../images/main-line.png);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h2.white-line::after{
+  display: block;
+  content: '';
+  width: 160px;
+  height: 16px;
+  background-image: url(../images/line-white.png);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
@@ -261,6 +382,16 @@ img {
   font-size: 18px;
   margin-top: 13px;
 }
+
+.h-text::after{
+  display: block;
+ content: "";
+ width: 136px;
+height: 3px;
+background-color: var(--button-color);
+ margin-top: 11px;
+}
+
 .text {
   color: var(--grey-2-color);
   font-family: var(--font-2);
@@ -311,35 +442,50 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.input-row{
+  position: relative;
 }
 
 .mail {
-  position: relative;
   min-width: calc(535px - 89px);
   height: 56px;
+  border-radius: 5px;
+  padding-left: 10px;
+  font-family: var(--font-2);
+  font-weight: 300;
+  font-size: 16px;
+  color: var(--grey-2-color);
 }
 
 .button {
   position: absolute;
+  top: 0;
   width: 89px;
   height: 56px;
   background-color: var(--button-color);
+  background-image: url(../images/fast-forward.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   /* border: 1px solid var(--white-color);*/
   border-radius: 5px;
   margin: 0;
 }
 
-.overlay{
+.overlay {
   position: relative;
 }
 
-.overlay::before{
+.overlay::before {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  content: '';
+  content: "";
   background-color: rgba(0, 0, 0, 0.3);
 }
 
