--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,10 @@ body {
   font-family: var(--font-1);
 }
 
+p,h1,h2,h3{
+  margin: 0;
+}
+
 .list {
   margin: 0;
   padding: 0;
@@ -35,6 +39,7 @@ body {
 }
 
 .top-header {
+  z-index: 1;
   position: sticky;
   top: 0;
   height: 50px;
@@ -179,9 +184,6 @@ b {
 
 .tool{
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-left: 30px;
   padding: 0;
@@ -392,6 +394,10 @@ img {
   border: 1px solid #ffffff;
 }
 
+.actions:hover button{
+  background-color: var(--accent-color);
+}
+
 .like{
   margin: 0;
   padding: 0;
@@ -571,6 +577,3 @@ background-color: var(--button-color);
   display: block;
 }
 
-main {
-  margin-bottom: 30px;
-}
