--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,14 @@ a.letter::before {
   margin-left: auto;
 }
 
+.container-menu{
+  width: 1110px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
 .page-nav {
   display: flex;
   align-items: center;
@@ -126,7 +134,6 @@ a.letter::before {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-left: auto;
 }
 
 .logo {
@@ -394,8 +401,17 @@ img {
   border: 1px solid #ffffff;
 }
 
-.actions:hover button{
+.like:hover {
   background-color: var(--accent-color);
+}
+.share:hover{
+background-color: var(--img-color);
+}
+.clock:hover{
+  background-color: var(--hover-color);
+}
+.basket:hover{
+  background-color: var(--img-color);
 }
 
 .like{
@@ -436,7 +452,6 @@ img {
 
 .basket{
   margin: 0;
-  padding: 0;
   width: 164px;
   height: 50px;
   background-color: #323232;
@@ -445,9 +460,13 @@ img {
   background-repeat: no-repeat;
   background-origin: padding-box;
   border: 1px solid #ffffff;
+}
+.basket::after{
+  content: "add to cart";
+  color: var(--white-color);
   font-family: var(--font-2);
   text-transform: uppercase;
-  color: var(--white-color);
+  padding-left: 20%;
 }
 
 .item:hover .actions{
