--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,6 @@ a.letter::before {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-left: 5%;
 }
 
 .link {
@@ -182,10 +181,6 @@ b {
   align-items: center;
 }
 
-.options :last-child{
-  margin-right: 30px;
-}
-
 .toolblock{
   margin-top: 90px;
 }
@@ -193,8 +188,12 @@ b {
 .tool{
   text-align: center;
   align-items: center;
-  margin-left: 30px;
+  margin-right: 30px;
   padding: 0;
+}
+
+.tool:last-child{
+  margin-right: 0;
 }
 
 .tool-name{
@@ -203,6 +202,7 @@ b {
   font-weight: 600;
   font-size: 18px;
   color: var(--grey-2-color);
+  margin-bottom: 30px;
 }
 
 .settings::before{
@@ -285,6 +285,7 @@ section {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 48px;
+  margin-bottom: 30px;
 }
 
 h2.color-line::after{
@@ -505,6 +506,8 @@ background-color: var(--button-color);
 }
 .blog {
   width: 350px;
+  margin: 0;
+  margin-bottom: 30px;
 }
 .blog:not(:nth-child(3n)) {
   margin-right: 30px;
